[gd_scene load_steps=2 format=3 uid="uid://cd8gabe0xmt"]

[ext_resource type="Script" path="res://components/MainMenu.gd" id="1_0y8on"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y8on")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "5 Days in Blobtown"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewGameBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "New Game"

[node name="LoadGameBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Load Game"

[node name="QuitGameBtn" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Quit Game"
